# mk-core

backend/src/: pyproject.toml
backend/src/mk/: manage.py
backend/src/mk/api/v1/: urls.py
backend/src/mk/apps/auth_app/: admin.py  apps.py  managers.py  models.py
backend/src/mk/apps/auth_app/migrations/: 0001_initial.py
backend/src/mk/mk/: asgi.py  settings.py  urls.py  wsgi.py
frontend/mk/: components.d.ts  index.html  package.json  vite.config.ts
frontend/mk/src/: App.vue  main.ts
frontend/mk/src/assets/scss/: main.scss
frontend/mk/src/components/Base/: VCircleBtn.vue
frontend/mk/src/components/Blocks/Notification/: VNotificationItem.vue  VNotifications.vue
frontend/mk/src/enums/: routeNames.enum.ts
frontend/mk/src/i18n/: index.ts
frontend/mk/src/i18n/locales/: en.json  ru.json
frontend/mk/src/layouts/: AppLayout.vue  AppLayoutAdmin.vue  AppLayoutAuth.vue  AppLayoutDefault.vue  AppLayoutError.vue  layouts.types.ts
frontend/mk/src/middlewares/router/: loadLayout.middleware.ts
frontend/mk/src/plugins/: i18n.ts  index.ts  vuetify.ts
frontend/mk/src/router/: index.ts
frontend/mk/src/stores/: index.ts
frontend/mk/src/views/AdminViews/: AdminDashboard.vue  AdminEmail.vue
frontend/mk/src/views/AuthViews/: LoginView.vue  RegisterView.vue
frontend/mk/src/views/ErrorViews/: NotFoundView.vue
frontend/mk/src/views/HomeViews/: HomeView.vue
