[tool.poetry]
name = "mk"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["k1rson <vlad2k15@bk.ru>", "YannGotti <1111111111aleksey46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
